--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,3 +1,3 @@
 steps:
-  - label: "Example Test 7"
-    command: "echo Hello"
+  - label: "Unit Test Coverage"
+    command: "bash scripts/unit-test-coverage.sh"
