--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,3 +1,7 @@
 steps:
   - label: "Unit Test Coverage"
     command: "bash scripts/unit-tests-coverage.sh"
+    key: "code-coverage"
+    notify:
+      - github_commit_status:
+          context: "buildkite/code-coverage"
