--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -5,5 +5,5 @@ steps:
     notify:
       - github_commit_status:
           context: "buildkite/code-coverage"
-    artifacts_path:
+    artifact_path:
       - "**/build/reports/jacoco/*/*.xml"
