--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,9 +1,16 @@
 steps:
   - label: "Jacoco Test Coverage"
     command: "bash scripts/unit-tests-coverage.sh"
-    key: "code-coverage"
+    key: "generate-code-coverage"
     notify:
       - github_commit_status:
           context: "buildkite/code-coverage"
     artifact_paths:
       - "**/mockBuildDir/reports/jacoco/*/*.xml"
+
+  - label: "Parse Jacoco Report"
+    #command: "ruby scripts/jacocoXmlReportParser.rb"
+    command: "ruby scripts/hello.sh"
+    key: "code-coverage-report"
+    depends_on:
+      - step: "generate-code-coverage"
